perf(integration): add reverse-index for O(1) allocation-free lifecycle-event lookup
Replace per-read ConcurrentHashMap.newKeySet() scan with a volatile
reverse index (byEventType) rebuilt under a synchronized write on each
put/remove. Reads are a single volatile load returning a shared
immutable set (Set.of() singleton for absent keys). Writes remain rare
(integration config changes), so the synchronized rebuild cost is
acceptable.