@@ -18,7 +18,9 @@ package org.thingsboard.mqtt.broker.service.integration;
 import org.springframework.stereotype.Service;
 import org.thingsboard.mqtt.broker.common.data.integration.ClientLifecycleEventType;
 
-import java.util.Collections;
+import java.util.EnumMap;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -28,29 +30,37 @@ public class IntegrationLifecycleEventTypeCacheImpl implements IntegrationLifecy
 
     private final Map<String, Set<ClientLifecycleEventType>> byIntegrationId = new ConcurrentHashMap<>();
 
+    private volatile Map<ClientLifecycleEventType, Set<String>> byEventType = Map.of();
+
     @Override
-    public void put(String integrationId, Set<ClientLifecycleEventType> eventTypes) {
+    public synchronized void put(String integrationId, Set<ClientLifecycleEventType> eventTypes) {
         if (eventTypes == null || eventTypes.isEmpty()) {
             byIntegrationId.remove(integrationId);
         } else {
-            byIntegrationId.put(integrationId, Collections.unmodifiableSet(eventTypes));
+            byIntegrationId.put(integrationId, Set.copyOf(eventTypes));
         }
+        rebuildReverseIndex();
     }
 
     @Override
-    public void remove(String integrationId) {
+    public synchronized void remove(String integrationId) {
         byIntegrationId.remove(integrationId);
+        rebuildReverseIndex();
     }
 
     @Override
     public Set<String> getIntegrationIds(ClientLifecycleEventType eventType) {
-        Set<String> result = ConcurrentHashMap.newKeySet();
-        byIntegrationId.forEach((integrationId, eventTypes) -> {
-            if (eventTypes.contains(eventType)) {
-                result.add(integrationId);
-            }
-        });
-        return result;
+        return byEventType.getOrDefault(eventType, Set.of());
+    }
+
+    private void rebuildReverseIndex() {
+        Map<ClientLifecycleEventType, Set<String>> mutable = new HashMap<>();
+        byIntegrationId.forEach((integrationId, eventTypes) ->
+                eventTypes.forEach(eventType ->
+                        mutable.computeIfAbsent(eventType, k -> new HashSet<>()).add(integrationId)));
+        Map<ClientLifecycleEventType, Set<String>> immutable = new EnumMap<>(ClientLifecycleEventType.class);
+        mutable.forEach((eventType, ids) -> immutable.put(eventType, Set.copyOf(ids)));
+        this.byEventType = immutable;
     }
 
 }
